add_subdirectory(daytime1)
add_subdirectory(daytime2)
add_subdirectory(daytime3)
add_subdirectory(daytime4)
add_subdirectory(daytime5)
add_subdirectory(daytime6)
add_subdirectory(daytime7)
add_subdirectory(timer1)
add_subdirectory(timer2)
add_subdirectory(timer3)
add_subdirectory(timer4)
add_subdirectory(timer5)
